# telegram-cli

./: .env.example  .gitignore  AGENTS.md  README.md  create_bot.py  pyproject.toml  verify_api.py
src/telegram_cli/: __init__.py  __main__.py  botfather.py  cli.py  client.py  config.py  format.py  peers.py
